Fixed the background-image alignment issue

--- a/src/header/Header.css
+++ b/src/header/Header.css
@@ -69,6 +69,11 @@
 }
 
 @media only screen and (min-width: 75em) {
+    *,
+    *::before,
+    *::after {
+        font-size: 1rem;
+    }
     .brand-logo {
         width: 300px;
         height: 60px;
